# views-markov

./: .gitignore  README.md  pyproject.toml
notebooks/: sandbox.ipynb
r_version/: markov_fatalities_views_test.R
randahls_reindeer/: main.py
randahls_reindeer/configs/: config_meta.py  config_queryset.py  config_sweep.py
sandbox/notebooks/: fetch_test_data.ipynb  sandbox.ipynb
sandbox/r_version/: combiningpredictions.Rmd
sandbox/r_version/old_pipeline_version/: markov.py  markov_params.py  omm_fatalities_flex_pywrap.R
sandbox/r_version/rewritten_version/: combiningpredictions.Rmd  rewritten_markov.R  rewritten_markov_copy.R
sandbox/src/: auxiliaries.py  markov_model.py
src/: markov_model.py
views_markov/manager/: markovmodel_manager.py
views_markov/model/: markov_model.py
